quick fix for feature images on tablet

--- a/assets/scss/_tablet.scss
+++ b/assets/scss/_tablet.scss
@@ -252,6 +252,10 @@ article.entry-snippet {
   color: color(brand-color-two);
 }
 
+.featured-image {
+  margin-top: 0;
+}
+
 .blog-entry ul {
   margin: 0 auto;
   padding: 0 4rem;
